[gd_scene load_steps=6 format=3 uid="uid://cye03y25rfi8"]

[ext_resource type="Script" path="res://interface/SpoolEditScreen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b3qyicasv6pud" path="res://interface/DragAndDropList.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://ykle5gipo0v8" path="res://icons/sort-alpha-down.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://ifsr140r60d5" path="res://icons/delete.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://cgalqocn148ji" path="res://icons/add.svg" id="5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0.0627451, 0.12549, 1)

[node name="HBC" type="HBoxContainer" parent="Background"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Column1" type="VBoxContainer" parent="Background/HBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBC" type="HBoxContainer" parent="Background/HBC/Column1"]
layout_mode = 2

[node name="AddButton" type="Button" parent="Background/HBC/Column1/HBC"]
layout_mode = 2
tooltip_text = "Add new spool."
icon = ExtResource("5")

[node name="DeleteButton" type="Button" parent="Background/HBC/Column1/HBC"]
layout_mode = 2
tooltip_text = "Delete selected spool."
icon = ExtResource("4")

[node name="SpoolsLabel" type="Label" parent="Background/HBC/Column1/HBC"]
layout_mode = 2
text = "Spools:"

[node name="Spools" parent="Background/HBC/Column1" instance=ExtResource("2")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Column2" type="VBoxContainer" parent="Background/HBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBC" type="HBoxContainer" parent="Background/HBC/Column2"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/HBC/Column2/HBC"]
layout_mode = 2
text = "Spool Name:"

[node name="SpoolNameEdit" type="LineEdit" parent="Background/HBC/Column2/HBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Background/HBC/Column2/HBC"]
layout_mode = 2
text = "Active at start of play:"

[node name="SpoolStartsActiveCheckBox" type="CheckButton" parent="Background/HBC/Column2/HBC"]
layout_mode = 2

[node name="HBC2" type="HBoxContainer" parent="Background/HBC/Column2"]
layout_mode = 2

[node name="AddEncounterButton" type="Button" parent="Background/HBC/Column2/HBC2"]
layout_mode = 2
tooltip_text = "Add encounter to current spool."
text = "Add encounter"

[node name="RemoveEncounterButton" type="Button" parent="Background/HBC/Column2/HBC2"]
layout_mode = 2
tooltip_text = "Remove encounter from current spool."
text = "Remove encounter"

[node name="CurrentSpoolEncounterList" type="ItemList" parent="Background/HBC/Column2"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="Column3" type="VBoxContainer" parent="Background/HBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchBar" type="HBoxContainer" parent="Background/HBC/Column3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Background/HBC/Column3/SearchBar"]
layout_mode = 2
tooltip_text = "Press enter after entering search term in order to filter events by search term."
mouse_filter = 1
text = " Search Encounter:"

[node name="AddableSearch" type="LineEdit" parent="Background/HBC/Column3/SearchBar"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Press enter after entering search term in order to filter encounters by search term."
placeholder_text = "Enter search term"

[node name="SortBar" type="HBoxContainer" parent="Background/HBC/Column3"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/HBC/Column3/SortBar"]
layout_mode = 2
text = " Sort by:"

[node name="AddableToggleReverseButton" type="Button" parent="Background/HBC/Column3/SortBar"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("3")

[node name="AddableSortMenu" type="OptionButton" parent="Background/HBC/Column3/SortBar"]
layout_mode = 2
item_count = 10
popup/item_0/text = "Alphabetical"
popup/item_0/id = 0
popup/item_1/text = "Creation Time"
popup/item_1/id = 1
popup/item_2/text = "Modified Time"
popup/item_2/id = 2
popup/item_3/text = "Option Count"
popup/item_3/id = 3
popup/item_4/text = "Reaction Count"
popup/item_4/id = 4
popup/item_5/text = "Effect Count"
popup/item_5/id = 5
popup/item_6/text = "Characters"
popup/item_6/id = 6
popup/item_7/text = "Spools"
popup/item_7/id = 7
popup/item_8/text = "Desirability"
popup/item_8/id = 9
popup/item_9/text = "Word Count"
popup/item_9/id = 8

[node name="AddableEncounters" type="ItemList" parent="Background/HBC/Column3"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="NoSpoolColumn" type="VBoxContainer" parent="Background/HBC"]
visible = false
layout_mode = 2

[node name="NoSpoolMargin" type="HSeparator" parent="Background/HBC/NoSpoolColumn"]
layout_mode = 2

[node name="NoSpoolSelected" type="Label" parent="Background/HBC/NoSpoolColumn"]
layout_mode = 2
text = "Select a spool to display its encounters."

[node name="SpoolDeletionConfirmationDialog" type="ConfirmationDialog" parent="."]

[node name="CannotDeleteSpoolNotification" type="AcceptDialog" parent="."]
dialog_text = "Storyworlds require at least one spool."

[connection signal="pressed" from="Background/HBC/Column1/HBC/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="Background/HBC/Column1/HBC/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="multi_selected" from="Background/HBC/Column1/Spools" to="." method="_on_Spools_multi_selected"]
[connection signal="text_changed" from="Background/HBC/Column2/HBC/SpoolNameEdit" to="." method="_on_SpoolNameEdit_text_changed"]
[connection signal="pressed" from="Background/HBC/Column2/HBC/SpoolStartsActiveCheckBox" to="." method="_on_SpoolStartsActiveCheckBox_pressed"]
[connection signal="pressed" from="Background/HBC/Column2/HBC2/AddEncounterButton" to="." method="_on_AddEncounterButton_pressed"]
[connection signal="pressed" from="Background/HBC/Column2/HBC2/RemoveEncounterButton" to="." method="_on_RemoveEncounterButton_pressed"]
[connection signal="item_activated" from="Background/HBC/Column2/CurrentSpoolEncounterList" to="." method="_on_CurrentSpoolEncounterList_item_activated"]
[connection signal="multi_selected" from="Background/HBC/Column2/CurrentSpoolEncounterList" to="." method="_on_CurrentSpoolEncounterList_multi_selected"]
[connection signal="text_submitted" from="Background/HBC/Column3/SearchBar/AddableSearch" to="." method="_on_AddableSearch_text_entered"]
[connection signal="toggled" from="Background/HBC/Column3/SortBar/AddableToggleReverseButton" to="." method="_on_AddableToggleReverseButton_toggled"]
[connection signal="item_selected" from="Background/HBC/Column3/SortBar/AddableSortMenu" to="." method="_on_AddableSortMenu_item_selected"]
[connection signal="item_activated" from="Background/HBC/Column3/AddableEncounters" to="." method="_on_AddableEncounters_item_activated"]
[connection signal="multi_selected" from="Background/HBC/Column3/AddableEncounters" to="." method="_on_AddableEncounters_multi_selected"]
[connection signal="confirmed" from="SpoolDeletionConfirmationDialog" to="." method="_on_SpoolDeletionConfirmationDialog_confirmed"]
